This is the Change Log for PHPlot.
The project home page is http://sourceforge.net/projects/phplot/
-----------------------------------------------------------------------------
2010-11-28
    * Feature request 3117873 "Data value labels in more plot types":
      Implemented Data Value Labels for plot types points, lines,
      linepoints, and squared.  Added 2 class variables which can be
      set to control the distance and angle of the labels from points.
      New internal function CheckDataValueLabels() calculates position
      and text alignment for these labels.

    * Updated comments for Set[XY]DataLabelPos to match the text in
      the manual, which was rewritten to clarify label types.

2010-11-23
    * Code cleanup. Moved some functions around to group "plot drawing
      helpers" separately from "plot drawing". No changes to operation.

2010-11-21
    * Feature request 3111166 "Control legend colorbox width":
      Added a class variable legend_colorbox_width which can be changed
      to make the colorboxes wider or narrower.

2010-11-16
    * Feature request 3093483 "Investing support chart types":
      Added 3 new plot types: Basic OHLC (Open/High/Low/Close), Candlesticks,
      and Filled Candlesticks. Implemented with one new function to handle the
      3 new plot types: ohlc, candlesticks, and candlesticks2.

2010-11-11
    * Moved information about plot types into a new static member array
      plots[]. (This is an internal change with no impact on usage, but will
      make it easier to add new plot types.) SetPlotType() no longer needs a
      list of plot types to check, FindDataLimits() does not need to check for
      specific plot types to to process the data array, and DrawGraph() uses
      data from the array rather than knowing about all the plot types.

2010-10-31
    * Changed internal CalcBarWidths() to take two arguments which indicate
      how it should calculate bar widths, rather than having it check the